--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
 }
 
 .app__header{
+  position: sticky;
+  top: 0;
+  z-index: 15;
   background-color: white;
   padding: 20px;
   border-bottom: solid 1px lightgray;
